관리자페이지 디자인 수정중

--- a/src/main/resources/templates/memberPages/admin.html
+++ b/src/main/resources/templates/memberPages/admin.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <title>admin</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-
+    <!--  폰트-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jua&family=Nanum+Gothic&family=Noto+Sans+KR&display=swap"
+          rel="stylesheet">
+    <style>
+        *{
+            font-family: 'Jua', sans-serif;
+            font-family: 'Nanum Gothic', sans-serif;
+            font-family: 'Noto Sans KR', sans-serif;
+        }
+    </style>
 </head>
-<body>
+<body style="background-color: white">
 <th:block th:replace="commonPages/header :: header"></th:block>
 <a href="/item/main" class="btn btn-primary">상품관리</a>
 <a href="/order/listAll" class="btn btn-primary">주문관리</a>
