카테고리 분류 및 검색기능

--- a/src/main/resources/templates/commonPages/header.html
+++ b/src/main/resources/templates/commonPages/header.html
@@ -77,9 +77,9 @@
                         </div>
 
                         <ul style="margin-left: 100px;">
-                            <li><a class="aa" href="#">소형 식물</a></li>
-                            <li><a class="aa" href="#">중형 식물</a></li>
-                            <li><a class="aa" href="#">대형 식물</a></li>
+                            <li><a class="aa" href="/item/small">소형 식물</a></li>
+                            <li><a class="aa" href="/item/medium">중형 식물</a></li>
+                            <li><a class="aa" href="/item/large">대형 식물</a></li>
                             <li><a class="aa" href="/item/main">전체상품</a></li>
                         </ul>
                     </nav>
