문의하기 수정

--- a/src/main/resources/templates/questionPages/questionSave.html
+++ b/src/main/resources/templates/questionPages/questionSave.html
@@ -51,7 +51,7 @@
                 <table class="table">
                     <tr>
                         <th>작성자</th>
-                        <td><input type="text" th:value="${session.member.memberName}" readonly name="questionName" class="form-control">
+                        <td><input type="text" th:value="${session.member.userId}" readonly name="questionName" class="form-control">
                         </td>
                     </tr>
                     <tr>
