--- a/src/main/resources/templates/questionPages/questionDetail.html
+++ b/src/main/resources/templates/questionPages/questionDetail.html
@@ -72,14 +72,14 @@
 
 
                 <div>
-                    <textarea class="form-control" rows="5" th:text="${question.questionContents}"></textarea>
+                    <textarea class="form-control" rows="5" th:text="${question.questionContents}" readonly></textarea>
                 </div>
-                <div th:if="${session.member.userId} == 'admin'">
+                    <div th:if="${session.member.userId.toString().equals('admin')}">
                     <input id="replyContents" type="text" value="" name="replyContents" class="form-control" style="display: inline" placeholder="답변내용">
                     <button type="button" class="btn btn-warning" style="display: inline; margin-top: 10px" onclick="reply()">답변 작성</button>
                     <button type="button" class="btn btn-default" style="float:right ; display: inline; margin-top: 10px" onclick="questionList()">목록</button>
                 </div>
-                <div th:unless="${session.member.userId} == 'admin'" style="display: inline">
+                <div th:unless="${session.member.userId.toString().equals('admin')}">
                     <button type="button" class="btn btn-default" style="float:right; display: inline; margin-top: 10px" onclick="questionList()">목록</button>
                 </div>
 
