구매수량 품절 수정

--- a/src/main/resources/templates/itemPages/itemDetail.html
+++ b/src/main/resources/templates/itemPages/itemDetail.html
@@ -43,12 +43,20 @@
         </div>
         <div>
             <label style="margin-right: 65px">가격</label>
+            <input type="hidden" name="itemPrice" th:value="${item.itemPrice}">
             <p th:text="${item.itemPrice}+'원'" class="price-form text-form"></p>
         </div>
         <div>
-            <label style="margin-right: 40px">구매수량</label>
+
+            <div th:if="${item.itemCount == 0}">
+                <label style="margin-right: 40px">구매수량</label>
+                <p style="color: red; font-weight: bold;">품절</p>
+            </div>
+            <div th:unless="${item.itemCount == 0}">
+                <label style="margin-right: 40px">구매수량</label>
             <input type="number" id="itemCountInput" min="1" max="100" value="1" name="cartCount"
                    onchange="total()" class="text-form">
+            </div>
         </div>
         <div>
             <label style="margin-right: 40px">택배배송</label>
@@ -61,13 +69,17 @@
 
 
         <div th:if="${session.member} != null">
-            <input type="button" class="btn btn-outline-dark" value="장바구니" onclick="cart()">
-            <input type="button" class="btn btn-success" value="바로구매" onclick="orderItem()">
+            <input type="button" class="btn btn-outline-dark" value="장바구니" onclick="cart()" style="float: left">
+            <div th:if="${item.itemCount != 0}">
+            <input type="button" class="btn btn-success" value="구매하기" onclick="orderItem()" style="float: left">
+            </div>
             <input type="hidden" value="loginOk" name="loginCheck">
         </div>
         <div th:unless="${session.member}">
-            <input type="button" class="btn btn-outline-dark" value="장바구니" onclick="cart()">
-            <input type="button" class="btn btn-success" value="구매하기" onclick="orderItem()">
+            <input type="button" class="btn btn-outline-dark" value="장바구니" onclick="cart()" style="float: left">
+            <div th:if="${item.itemCount != 0}">
+            <input type="button" class="btn btn-success" value="구매하기" onclick="orderItem()" style="float: left">
+            </div>
             <input type="hidden" value="loginNo" name="loginCheck">
         </div>
     </div>
