--- a/src/main/resources/templates/questionPages/questionList.html
+++ b/src/main/resources/templates/questionPages/questionList.html
@@ -33,7 +33,7 @@
         }
     </style>
 </head>
-<body>
+<body style="background-color: white">
 <th:block th:replace="commonPages/header :: header"></th:block>
 <div class="container" id="question-list">
     <table class="table table-striped table-hover text-center" th:if="${message} != 'null'">
