최근본상품 쿠키에 저장하기

--- a/src/main/resources/templates/itemPages/itemMain.html
+++ b/src/main/resources/templates/itemPages/itemMain.html
@@ -172,5 +172,11 @@
         const id = deleteFn.id;
         location.href = "/item/delete/" + id;
     }
+
+    //최근본상품 쿠키 호출
+
+
+
+
 </script>
 </html>
