--- a/src/main/resources/templates/cartPages/cartList.html
+++ b/src/main/resources/templates/cartPages/cartList.html
@@ -159,9 +159,14 @@
                     "cartList": JSON.stringify(aJsonArray)
                 },
                 dataType: "text",
-                success: function (data) {
-                    console.log("성공");
-                    location.href = "/order/cart3?userId="+userId;
+                success: function (result) {
+                    if (result == "ok"){
+                        location.href = "/order/cart3?userId="+userId;
+                    }else {
+                        alert("이전 주문내역이 존재합니다. 주문페이지로 이동합니다.");
+                        location.href = "/order/cart3?userId="+userId;
+                    }
+
                 },
                 error: function (err) {
                     console.log("실패");
